--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: elixir
 
 matrix:
   include:
-    - otp_release: 18.3
+    - otp_release: 19.2
+      elixir: 1.4.0
+    - otp_release: 19.2
       elixir: 1.3.4
-    - otp_release: 19.1
+    - otp_release: 18.3
+      elixir: 1.4.0
+    - otp_release: 18.3
       elixir: 1.3.4
 
 sudo: false
